--- a/homework0319/color1.css
+++ b/homework0319/color1.css
@@ -2,14 +2,14 @@
       
     }
     h1 {
-        color: blue;
+        color:rgb(235, 129, 147);
         font-family: verdana;
         font-size: 300%;
         padding: 5px;
     }    
     p {
         border: 2px solid tomato;
-        color: dodgerblue;
+        color: red;
         font-family: courier;
         font-size: 160%;
         padding: 3px;
